Adding the favicon plus tittle

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#000000" />
-    <meta name="developer" content="Brian Cheruiyot">
-    <meta name="description" content="Brian Cheruiyot Profile || Software Engineer." />
+    <meta name="developer" content="Dennis Ndegwa">
+    <meta name="description" content="Dennis Ndegwa Profile || Software Engineer." />
     <meta name="image" content="https://firebasestorage.googleapis.com/v0/b/bryce-portfolio.appspot.com/o/Screenshot%202019-09-19%20at%2023.06.04.png?alt=media&token=817030d8-72f9-4bc8-a56c-5f6a71623ecd" />
     <meta name="og:image" content="https://firebasestorage.googleapis.com/v0/b/bryce-portfolio.appspot.com/o/Screenshot%202019-09-19%20at%2023.06.04.png?alt=media&token=817030d8-72f9-4bc8-a56c-5f6a71623ecd" />
 
@@ -27,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Brian Cheruiyot</title>
+    <title>Njogu wa Ndegwa</title>
 
     <!-- FAV AND ICONS   -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
