--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,8 @@
     <meta name="theme-color" content="#000000" />
     <meta name="developer" content="Dennis Ndegwa">
     <meta name="description" content="Dennis Ndegwa Profile || Software Engineer." />
-    <meta name="image" content="https://firebasestorage.googleapis.com/v0/b/bryce-portfolio.appspot.com/o/Screenshot%202019-09-19%20at%2023.06.04.png?alt=media&token=817030d8-72f9-4bc8-a56c-5f6a71623ecd" />
-    <meta name="og:image" content="https://firebasestorage.googleapis.com/v0/b/bryce-portfolio.appspot.com/o/Screenshot%202019-09-19%20at%2023.06.04.png?alt=media&token=817030d8-72f9-4bc8-a56c-5f6a71623ecd" />
+    <meta name="image" content="https://firebasestorage.googleapis.com/v0/b/mr-ndegwa.appspot.com/o/Screenshot%20(1).jpg?alt=media&token=d9b45cba-c1e0-4b3c-b662-0540816de57f" />
+    <meta name="og:image" content="https://firebasestorage.googleapis.com/v0/b/mr-ndegwa.appspot.com/o/Screenshot%20(1).jpg?alt=media&token=d9b45cba-c1e0-4b3c-b662-0540816de57f" />
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
